--- a/src/app/modules/appraisals/onetoone.component.html
+++ b/src/app/modules/appraisals/onetoone.component.html
@@ -78,14 +78,21 @@
                                                     <span class="parameter-heading p-left20">One-To-One Comment</span>
                                                 </div>
                                                 <div class="one-to-one-border">
-                                                    <div class="rating-comment">
+                                                    <div class="rating-comment ui-input">
                                                         <textarea class="materialize-textarea m-btm" style="height: 44px;" [(ngModel)]="onetooneComments" name="comments" id="comments" #comments="ngModel" required></textarea>
-                                                        <div *ngIf="comments.errors && formSubmit==true" class="red">
+                                                        <div *ngIf="comments.errors && formSubmit==true" class="errorMessage">
                                                             <div [hidden]="!comments.errors.required">
                                                                 Comment is required
                                                             </div>
                                                         </div>
                                                     </div>
+                                                </div>
+                                            </div>
+                                            <div class="col s12 m-top20" *ngIf="isPromotion==true">
+                                                <div class="col s12 promotion-view">
+                                                    <p>
+                                                        <span class="promo-circle"><i class="fa fa-briefcase promotion-icon"></i></span> Promotion Recomended: <span>{{promotionFor}}</span>
+                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
