--- a/src/app/modules/approvals/appraisal/appraisal.approval.history.html
+++ b/src/app/modules/approvals/appraisal/appraisal.approval.history.html
@@ -6,7 +6,7 @@
                     <div class="col s12 padding-zero">
                         <div class="reimbursement-wrapper approvals-data" *ngIf="rowData.length > 0">
                             <div class="row m-bottom0 header hide-on-med-and-down">
-                                <div class="col s12 m2 offset-m2">
+                                <div class="col s12 m2 offset-m3">
                                     <h5 class="title">Appraiser</h5>
                                 </div>
                                 <div class="col s12 m2">
@@ -24,9 +24,6 @@
                                 <div class="col s12 m1 center-align">
                                     <h5 class="title">Reviewer Rating</h5>
                                 </div>
-                                <div class="col s12 m1 center-align">
-                                    <h5 class="title">Normalised Rating</h5>
-                                </div>
                                 <div class="col s12 m1">
                                 </div>
                             </div>
@@ -37,7 +34,7 @@
                                         <template #bg let-item='row'>
                                             <div class="approvals-wrapper">
                                                 <div class="row m-bottom0">
-                                                    <div class="col s12 m10 offset-m1 l2">
+                                                    <div class="col s12 m10 offset-m1 l3">
                                                         <div class="row m-bottom0 employee-data">
                                                             <div class="col s12 m4 center-align padding-zero">
                                                                 <div class="employee-search-img">
@@ -63,10 +60,10 @@
                                                         </div>
                                                     </div>
                                                     <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Appraiser</span>
-                                                        <span>{{item.reviewer}}</span>
+                                                        <span>{{item.appraiser}}</span>
                                                     </div>
                                                     <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Reviewer</span>
-                                                        <span>{{item.appraiser}}</span>
+                                                        <span>{{item.reviewer}}</span>
                                                     </div>
                                                     <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Grade</span>
                                                         <span>{{item.grade}}</span>
@@ -80,21 +77,15 @@
                                                         <span *ngIf="item.status == 5">Closed</span>
                                                     </div>
                                                     <div class="col s12 m6 l1 center-align"><span class="expense-label hide-on-large-only">Appraiser Rating</span>
-                                                        <span>
+                                                        <span *ngIf="item.appraiserScore">
                                                             <span class="expense-label hide-on-large-only">Rating</span>
                                                             <img src="images/rate-star-{{item.appraiserScore}}.png" alt="" class="rating-star-circle responsive-img">                                                            
                                                         </span>
                                                     </div>
                                                     <div class="col s12 m6 l1 center-align"><span class="expense-label hide-on-large-only">Reviewer Rating</span>
-                                                        <span>
+                                                        <span *ngIf="item.reviewerScore">
                                                             <span class="expense-label hide-on-large-only">Rating</span>
                                                             <img src="images/rate-star-{{item.reviewerScore}}.png" alt="" class="rating-star-circle responsive-img">                                                               
-                                                        </span>
-                                                    </div>
-                                                    <div class="col s12 m6 l1 center-align"><span class="expense-label hide-on-large-only">Normalised Rating</span>
-                                                        <span>
-                                                            <span class="expense-label hide-on-large-only">Rating</span>
-                                                            <img src="images/rate-star-{{item.finalReviewerRating}}.png" alt="" class="rating-star-circle responsive-img">                                                               
                                                         </span>
                                                     </div>
                                                     <div class="col s12 m12 l1 align-bottom padding-zero">
