changes for helpdesk report model

--- a/src/app/modules/reports/reportslist.component.html
+++ b/src/app/modules/reports/reportslist.component.html
@@ -98,7 +98,7 @@
                                 </div>
                                 <div class="card-action"><a class="btn-flat" routerLink="/employee/reports/view/Helpdesk">Helpdesk Report</a>
                                 </div>
-                                <div class="overlay-upcoming"></div>
+                                <div class=""></div>
                             </div>
                         </div>
 
